# 2852Vision

./: .gitignore  .gitmodules  README.md
backend/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  xmake.lua
backend/cmake/: FindRealSense.cmake  FindSpinnaker.cmake
backend/src/: main.cpp
backend/src/core/: config.cpp  config.hpp  database.cpp  database.hpp
backend/src/drivers/: base_driver.cpp  base_driver.hpp  realsense_driver.cpp  realsense_driver.hpp  realsense_loader.cpp  realsense_loader.hpp  spinnaker_driver.cpp  spinnaker_driver.hpp  spinnaker_loader.cpp  spinnaker_loader.hpp  usb_driver.cpp  usb_driver.hpp
backend/src/hw/: accel.cpp  accel.hpp
backend/src/metrics/: registry.cpp  registry.hpp
backend/src/models/: camera.cpp  camera.hpp  pipeline.cpp  pipeline.hpp  setting.cpp  setting.hpp
backend/src/pipelines/: apriltag_pipeline.cpp  apriltag_pipeline.hpp  base_pipeline.cpp  base_pipeline.hpp  coloured_shape_pipeline.cpp  coloured_shape_pipeline.hpp  object_detection_ml_pipeline.cpp  object_detection_ml_pipeline.hpp  optical_flow_pipeline.cpp  optical_flow_pipeline.hpp
backend/src/platform/: win32_compat.hpp
backend/src/routes/: calibration.cpp  calibration.hpp  cameras.cpp  cameras.hpp  database.cpp  database.hpp  networktables.cpp  networktables.hpp  pipelines.cpp  pipelines.hpp  settings.cpp  settings.hpp  spinnaker.cpp  spinnaker.hpp  system.cpp  system.hpp  vision_ws.cpp  vision_ws.hpp
backend/src/services/: camera_service.cpp  camera_service.hpp  networktables_service.cpp  networktables_service.hpp  pipeline_service.cpp  pipeline_service.hpp  settings_service.cpp  settings_service.hpp  streamer_service.cpp  streamer_service.hpp
backend/src/threads/: thread_manager.cpp  thread_manager.hpp
backend/src/utils/: coordinate_system.hpp  frame_buffer.cpp  frame_buffer.hpp  geometry.hpp  network_utils.cpp  network_utils.hpp
backend/src/vision/: field_layout.cpp  field_layout.hpp
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: cameras.spec.ts  settings.spec.ts  utils.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/calibration/: BoardConfig.tsx  CalibrationWizard.tsx  CaptureStep.tsx  ResultStep.tsx
frontend/src/components/dashboard/: CameraControls.tsx  CameraSelector.tsx  (+6 more)
frontend/src/constants/: dashboard.ts  pipeline.ts
frontend/src/hooks/: useCameraStatus.ts  useNetworkTablesStatus.ts  usePipelineResults.ts  useVisionWebSocket.ts
frontend/src/lib/: api.ts  math.ts  queries.ts
frontend/src/pages/: Calibration.tsx  Cameras.tsx  Dashboard.tsx  Monitoring.tsx  NotFound.tsx  Settings.tsx
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
(+20 files in other folders)
